# sw63

./: .clang-format  .gitignore  .gitmodules  LANGUAGES.md  LICENSE  README.md  flash.sh
.archive/mk3/firmware/sw63-rust/src/: ds3231.rs
.archive/mk3/pcb/: sw63_mk3_2_cpl.csv
.archive/mk4/sw63_mk4_displaytestboard/jlcpcb/gerber/: sw63_mk4_displaytestboard-MaskBottom.gbr  sw63_mk4_displaytestboard-MaskTop.gbr  sw63_mk4_displaytestboard-SilkBottom.gbr
archive_junk/mk2/firmware/sw63/: Animation.h
archive_junk/mk2/firmware/sw63/animations/: AnimationExact.cpp  AnimationPast.cpp
archive_junk/mk2/firmware/sw63/watchface/: WatchFace.cpp  WatchFace.h
archive_junk/mk3/firmware/SW63MK3/: SW63MK3.ino
archive_junk/mk3/firmware/SW63MK3/src/: AnimationProcessor.h  Application.h  Hardware.cpp  Hardware.h
archive_junk/mk3/firmware/sw63-rust/: README.md  justfile  memory.x
archive_junk/mk3/firmware/sw63-rust/.cargo/: config.toml
archive_junk/mk3/graphics/: sw63_mk3.ai  sw63_mk3_bottom.ai
archive_junk/mk3/pcb/: sw63_mk3.brd  sw63_mk3.sch  sw63_mk3_2.sch  sw63_mk3_2_bom.csv  sw63_mk3_bom.csv  sw63_mk3_cpl.csv  sw63_mk3_jig.sch
archive_junk/mk4/sw63_mk4_displaytestboard/: fp-info-cache  sw63_mk4_displaytestboard.kicad_prl  sw63_mk4_displaytestboard.kicad_pro  sw63_mk4_displaytestboard.kicad_sch
archive_junk/mk4/sw63_mk4_displaytestboard/jlcpcb/: project.db
archive_junk/mk4/sw63_mk4_displaytestboard/jlcpcb/gerber/: sw63_mk4_displaytestboard-CuBottom.gbr  sw63_mk4_displaytestboard-CuTop.gbr  sw63_mk4_displaytestboard-EdgeCuts.gbr  sw63_mk4_displaytestboard-NPTH.drl  sw63_mk4_displaytestboard-PTH.drl  sw63_mk4_displaytestboard-SilkTop.gbr
archive_junk/mk4/sw63_mk4_displaytestboard/jlcpcb/production_files/: BOM-sw63_mk4_displaytestboard.csv
build-instructions/: available-here.txt
case/: sw63-case-graphics-export.ai  sw63-case-graphics-export.dxf  sw63-case-graphics.ai  sw63-case-graphics.dxf  sw63-case.step
code/: CMakeLists.txt
code/bootloader/: README.md  sw63-bootloader.hex
code/ld/: stm32l052k8.ld  stm32l052k8_bootloader.ld
code/src/: main.cpp  stm32l0xx_hal_conf.h  syscalls.c  tusb_config.h  usb_app.cpp  usb_descriptors.c
code/src/app/: Animation.hpp  AnimationRunner.cpp  AnimationRunner.hpp  App.cpp  App.hpp  Locale.cpp  Locale.hpp  LocaleConfig.cpp  LocaleConfig.hpp  Settings.hpp  TimingsConfig.hpp
code/src/app/animations/: Animation.hpp  AnimationCharge.cpp  AnimationCharge.hpp  AnimationIntro.cpp  AnimationIntro.hpp  AnimationTime.cpp  AnimationTime.hpp  ClockFrame.hpp
code/src/app/ui/: Layer.hpp  LayerNormal.cpp  LayerNormal.hpp  LayerSecret.cpp  LayerSecret.hpp  LayerSettings.cpp  LayerSettings.hpp
code/src/dev/: AdcInput.hpp  Battery.hpp  Button.cpp  Button.hpp  Communication.cpp  Communication.hpp  DS3231.cpp  DS3231.hpp  Display.cpp  Display.hpp  Pin.hpp  PwmBrightness.hpp  ShiftRegister.hpp  System.cpp  System.hpp
code/src/utils/: EnumTools.hpp  math_utils.hpp
code/sw63-rust/: .gitignore  Cargo.toml  build.rs
code/sw63-rust/src/: main.rs
communication/: PROTOCOL.md  README.md  sw63_client.py  sw63_client.sh
communication/python/: README.md  sw63_client.py
communication/react/sw63-communicator/: README.md  index.html  package-lock.json  package.json  vite.config.js
communication/react/sw63-communicator/src/: App.jsx  App.module.scss  SW63Client.js  Sw63Logo.jsx  i18n.js  index.css  main.jsx  utils.js
communication/react/sw63-communicator/src/components/: Box.jsx  Box.module.scss  Button.jsx  Button.module.scss  Dropdown.jsx  Dropdown.module.scss  Log.jsx  Log.module.scss  Row.jsx  Row.module.scss  TextButton.jsx  TextButton.module.scss  TickingWatchTime.jsx
communication/react/sw63-communicator/src/locales/: cs.json  de.json  en.json  hu.json  nl.json  pl.json  uk.json
easyeda-sources/: sw63-battery-pcb.json  sw63-battery.json  sw63-display-pcb.json  sw63-display.json  sw63-magnetic-charger-pcb.json  sw63-magnetic-charger.json
firmware/: sw63-2019-12-30.hex
firmware/sw63/: Animation.h  sw63.ino
firmware/sw63/animations/: AnimationExact.cpp  AnimationFrench.cpp  AnimationIntro.cpp  AnimationPast.cpp  AnimationTo.cpp
firmware/sw63/watchface/: WatchFace.cpp
mk3/firmware/SW63MK3/: SW63MK3.ino
mk3/firmware/SW63MK3/src/: AnimationProcessor.cpp  AnimationProcessor.h  Application.cpp  Application.h  Config.cpp  Config.h  Hardware.cpp  Hardware.h  types.h
mk3/pcb/: sw63_mk3.brd  sw63_mk3.sch  sw63_mk3_2.brd  sw63_mk3_2.sch  sw63_mk3_jig.brd
pcb/sw63_mk4_v1/: fp-info-cache  sw63_mk4_v1.kicad_pcb  sw63_mk4_v1.kicad_prl  sw63_mk4_v1.kicad_pro  sw63_mk4_v1.kicad_sch
pcb/sw63_mk4_v1/3d_models/: KSC321JLFS.step  LED_1206_W.step  LED_3mm_R.step  LED_5mm_B.step  LED_5mm_R.step  LED_5mm_Y.step  LP301020.step
pcb/sw63_mk4_v1/footprints/sw63_mk4.pretty/: BAT.kicad_mod  GT-USB-7070C.kicad_mod  LED_1206_W.kicad_mod  LED_D3.0mm_R.kicad_mod  LED_D5.0mm_R.kicad_mod  LED_D5.0mm_Y.kicad_mod  LED_W3.0mm_H2.0mm_Y.kicad_mod  MountingHole_1.6mm.kicad_mod  SW_Push_1P1T_NO_CK_KSC3xxJ.kicad_mod  TEMT6200FX01.kicad_mod
pcb/sw63_mk4_v1/jlcpcb/: project.db
pcb/sw63_mk4_v1/jlcpcb/production_files/: CPL-sw63_mk4_displaytestboard.csv
pcb/sw63_mk4_v2/: fp-info-cache  fp-lib-table  sw63_mk4_v2.kicad_pcb  sw63_mk4_v2.kicad_prl  sw63_mk4_v2.kicad_pro  sw63_mk4_v2.kicad_sch  sw63_mk4_v2.kicad_sch_old
pcb/sw63_mk4_v2/3d_models/: GT-USB-7070C.step  KSC3XXJ.step  LED_2x3mm_Y.step  LED_5mm_G.step
pcb/sw63_mk4_v2/footprints/sw63_mk4.pretty/: BAT.kicad_mod  LED_D5.0mm_B.kicad_mod  LED_D5.0mm_G.kicad_mod  SWD_2x03_SMD.kicad_mod
pcb/sw63_mk4_v2/jlcpcb/: project.db
pcb/sw63_mk4_v2/jlcpcb/gerber/: sw63_mk4_v2-CuBottom.gbr  sw63_mk4_v2-CuIn1.gbr  sw63_mk4_v2-CuIn2.gbr  sw63_mk4_v2-CuTop.gbr  sw63_mk4_v2-EdgeCuts.gbr  sw63_mk4_v2-MaskBottom.gbr  sw63_mk4_v2-MaskTop.gbr  sw63_mk4_v2-NPTH.drl  sw63_mk4_v2-PTH.drl  sw63_mk4_v2-SilkBottom.gbr  sw63_mk4_v2-SilkTop.gbr
pcb/sw63_mk4_v2/jlcpcb/production_files/: BOM-sw63_mk4_v1.csv  BOM-sw63_mk4_v2.csv  CPL-sw63_mk4_v1.csv
stl/: sw63-charging-port v26.stl  sw63-full-support-v27.stl
(+12 files in other folders)
