[package]
name = "sw63-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
panic-halt = "0.2.0"
atsamd-hal = { version = "0.14.0", features = ["samd21e", "unproven"] }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true

[[bin]]
name = "sw63-rust"
test = false
bench = false
